--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -174,12 +174,17 @@
       border-radius: 50%;
       background: var(--surface);
       color: var(--text);
-      font-size: 1.25rem;
       cursor: pointer;
       transition: all 0.15s;
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    .transport button svg {
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
     }
 
     .transport button:hover {
@@ -198,7 +203,11 @@
       height: 64px;
       background: var(--text);
       color: var(--bg);
-      font-size: 1.5rem;
+    }
+
+    .transport .play-btn svg {
+      width: 28px;
+      height: 28px;
     }
 
     .transport .play-btn:hover {
@@ -363,9 +372,15 @@
     </div>
 
     <div class="transport">
-      <button id="prev-btn" title="Previous" disabled>⏮</button>
-      <button class="play-btn" id="play-btn" title="Play" disabled>▶</button>
-      <button id="next-btn" title="Next" disabled>⏭</button>
+      <button id="prev-btn" title="Previous" disabled>
+        <svg viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6 8.5 6V6z"/></svg>
+      </button>
+      <button class="play-btn" id="play-btn" title="Play" disabled>
+        <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+      </button>
+      <button id="next-btn" title="Next" disabled>
+        <svg viewBox="0 0 24 24"><path d="M16 18h2V6h-2zm-10 0 8.5-6L6 6z"/></svg>
+      </button>
     </div>
 
     <div class="progress-bar">
