--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -16,10 +16,11 @@
     :root {
       --bg: #000;
       --surface: #0a0a0a;
-      --border: #1a1a1a;
+      --border: #222;
       --text: #fff;
       --text-dim: #666;
       --accent: #fff;
+      --header-height: 56px;
     }
 
     html, body {
@@ -36,11 +37,13 @@
 
     /* ===== Header ===== */
     header {
-      padding: 1rem 1.5rem;
+      height: var(--header-height);
+      padding: 0 1.5rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
       border-bottom: 1px solid var(--border);
+      flex-shrink: 0;
     }
 
     .logo {
@@ -104,6 +107,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
+      padding-bottom: calc(2rem + var(--header-height)); /* Compensate for header */
       position: relative;
     }
 
@@ -112,6 +116,7 @@
       max-width: 900px;
       aspect-ratio: 16 / 9;
       background: var(--surface);
+      border: 2px solid var(--border);
       border-radius: 12px;
       display: flex;
       flex-direction: column;
@@ -215,21 +220,69 @@
     }
 
     /* ===== Progress Bar ===== */
-    .progress-bar {
+    .progress-container {
       width: 100%;
       max-width: 900px;
+      margin-top: 1rem;
+      position: relative;
+      padding: 8px 0;
+    }
+
+    .progress-track {
       height: 4px;
       background: var(--border);
       border-radius: 2px;
-      margin-top: 1rem;
-      overflow: hidden;
+      position: relative;
+      cursor: pointer;
     }
 
-    .progress-bar .fill {
+    .progress-fill {
       height: 100%;
       background: var(--text);
       width: 0%;
-      transition: width 0.1s linear;
+      border-radius: 2px;
+      pointer-events: none;
+    }
+
+    .progress-dots {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      pointer-events: none;
+    }
+
+    .progress-dot {
+      position: absolute;
+      top: 50%;
+      width: 8px;
+      height: 8px;
+      background: var(--border);
+      border: 2px solid var(--bg);
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      pointer-events: auto;
+      cursor: pointer;
+      transition: all 0.15s;
+    }
+
+    .progress-dot:hover {
+      background: var(--text);
+      transform: translate(-50%, -50%) scale(1.3);
+    }
+
+    .progress-dot.active {
+      background: var(--text);
+    }
+
+    .progress-dot.text-event {
+      background: var(--text-dim);
+    }
+
+    .progress-dot.text-event:hover,
+    .progress-dot.text-event.active {
+      background: var(--text);
     }
 
     /* ===== Status ===== */
@@ -383,8 +436,11 @@
       </button>
     </div>
 
-    <div class="progress-bar">
-      <div class="fill" id="progress-fill"></div>
+    <div class="progress-container">
+      <div class="progress-track" id="progress-track">
+        <div class="progress-fill" id="progress-fill"></div>
+        <div class="progress-dots" id="progress-dots"></div>
+      </div>
     </div>
 
     <div class="status-bar">
