--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -107,7 +107,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      padding-bottom: calc(2rem + var(--header-height)); /* Compensate for header */
+      padding-bottom: calc(2rem + var(--header-height));
       position: relative;
     }
 
@@ -120,6 +120,7 @@
       border-radius: 12px;
       position: relative;
       overflow: hidden;
+      cursor: pointer;
     }
 
     .preview-canvas {
@@ -128,13 +129,62 @@
       display: block;
     }
 
-    /* ===== Transport Controls ===== */
+    /* ===== Overlay Controls ===== */
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      pointer-events: none;
+      opacity: 1;
+      transition: opacity 0.3s ease;
+    }
+
+    .overlay.hidden {
+      opacity: 0;
+    }
+
+    .overlay.hidden .transport,
+    .overlay.hidden .progress-container {
+      pointer-events: none;
+    }
+
+    /* Gradient overlays for better visibility */
+    .overlay::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 80px;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.5), transparent);
+      pointer-events: none;
+    }
+
+    .overlay::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 120px;
+      background: linear-gradient(to top, rgba(0,0,0,0.7), transparent);
+      pointer-events: none;
+    }
+
+    /* ===== Transport Controls (Centered) ===== */
     .transport {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 1rem;
-      margin-top: 1.5rem;
+      gap: 1.5rem;
+      pointer-events: auto;
+      z-index: 2;
     }
 
     .transport button {
@@ -142,7 +192,8 @@
       height: 48px;
       border: none;
       border-radius: 50%;
-      background: var(--surface);
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
       color: var(--text);
       cursor: pointer;
       transition: all 0.15s;
@@ -158,8 +209,8 @@
     }
 
     .transport button:hover {
-      background: #1a1a1a;
-      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.2);
+      transform: scale(1.1);
     }
 
     .transport button:disabled {
@@ -169,36 +220,44 @@
     }
 
     .transport .play-btn {
-      width: 64px;
-      height: 64px;
-      background: var(--text);
+      width: 72px;
+      height: 72px;
+      background: rgba(255, 255, 255, 0.95);
       color: var(--bg);
     }
 
     .transport .play-btn svg {
-      width: 28px;
-      height: 28px;
+      width: 32px;
+      height: 32px;
     }
 
     .transport .play-btn:hover {
-      background: #e0e0e0;
+      background: rgba(255, 255, 255, 1);
+      transform: scale(1.1);
     }
 
-    /* ===== Progress Bar ===== */
+    /* ===== Progress Bar (Bottom) ===== */
     .progress-container {
-      width: 100%;
-      max-width: 900px;
-      margin-top: 1rem;
-      position: relative;
-      padding: 8px 0;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 12px 16px 16px;
+      pointer-events: auto;
+      z-index: 2;
     }
 
     .progress-track {
       height: 4px;
-      background: var(--border);
+      background: rgba(255, 255, 255, 0.2);
       border-radius: 2px;
       position: relative;
       cursor: pointer;
+      transition: height 0.15s;
+    }
+
+    .progress-container:hover .progress-track {
+      height: 6px;
     }
 
     .progress-fill {
@@ -221,28 +280,34 @@
     .progress-dot {
       position: absolute;
       top: 50%;
-      width: 8px;
-      height: 8px;
-      background: var(--border);
-      border: 2px solid var(--bg);
+      width: 10px;
+      height: 10px;
+      background: rgba(255, 255, 255, 0.3);
+      border: 2px solid rgba(0, 0, 0, 0.5);
       border-radius: 50%;
       transform: translate(-50%, -50%);
       pointer-events: auto;
       cursor: pointer;
       transition: all 0.15s;
+      opacity: 0;
+    }
+
+    .progress-container:hover .progress-dot {
+      opacity: 1;
     }
 
     .progress-dot:hover {
       background: var(--text);
-      transform: translate(-50%, -50%) scale(1.3);
+      transform: translate(-50%, -50%) scale(1.4);
     }
 
     .progress-dot.active {
       background: var(--text);
+      opacity: 1;
     }
 
     .progress-dot.text-event {
-      background: var(--text-dim);
+      background: rgba(255, 255, 255, 0.5);
     }
 
     .progress-dot.text-event:hover,
@@ -250,15 +315,26 @@
       background: var(--text);
     }
 
-    /* ===== Status ===== */
-    .status-bar {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      max-width: 900px;
-      margin-top: 0.5rem;
+    /* ===== Time Display (Bottom left) ===== */
+    .time-display {
+      position: absolute;
+      bottom: 40px;
+      left: 16px;
       font-size: 0.75rem;
-      color: var(--text-dim);
+      color: rgba(255, 255, 255, 0.8);
+      z-index: 2;
+      pointer-events: none;
+    }
+
+    /* ===== Event Counter (Bottom right) ===== */
+    .event-display {
+      position: absolute;
+      bottom: 40px;
+      right: 16px;
+      font-size: 0.75rem;
+      color: rgba(255, 255, 255, 0.8);
+      z-index: 2;
+      pointer-events: none;
     }
 
     /* ===== Drawer Toggle ===== */
@@ -294,6 +370,7 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      z-index: 100;
     }
 
     .drawer.open {
@@ -385,30 +462,31 @@
   <main>
     <div class="preview-container" id="preview-container">
       <canvas class="preview-canvas" id="preview-canvas"></canvas>
-    </div>
+      
+      <!-- Overlay controls (YouTube-style) -->
+      <div class="overlay" id="overlay">
+        <div class="transport">
+          <button id="prev-btn" title="Previous" disabled>
+            <svg viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6 8.5 6V6z"/></svg>
+          </button>
+          <button class="play-btn" id="play-btn" title="Play" disabled>
+            <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+          </button>
+          <button id="next-btn" title="Next" disabled>
+            <svg viewBox="0 0 24 24"><path d="M16 18h2V6h-2zm-10 0 8.5-6L6 6z"/></svg>
+          </button>
+        </div>
 
-    <div class="transport">
-      <button id="prev-btn" title="Previous" disabled>
-        <svg viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6 8.5 6V6z"/></svg>
-      </button>
-      <button class="play-btn" id="play-btn" title="Play" disabled>
-        <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-      </button>
-      <button id="next-btn" title="Next" disabled>
-        <svg viewBox="0 0 24 24"><path d="M16 18h2V6h-2zm-10 0 8.5-6L6 6z"/></svg>
-      </button>
-    </div>
+        <span class="time-display" id="time-display">0:00 / 0:00</span>
+        <span class="event-display" id="event-display">— / —</span>
 
-    <div class="progress-container">
-      <div class="progress-track" id="progress-track">
-        <div class="progress-fill" id="progress-fill"></div>
-        <div class="progress-dots" id="progress-dots"></div>
+        <div class="progress-container">
+          <div class="progress-track" id="progress-track">
+            <div class="progress-fill" id="progress-fill"></div>
+            <div class="progress-dots" id="progress-dots"></div>
+          </div>
+        </div>
       </div>
-    </div>
-
-    <div class="status-bar">
-      <span id="time-display">0:00 / 0:00</span>
-      <span id="event-display">— / —</span>
     </div>
 
     <button class="drawer-toggle" id="drawer-toggle">Show Details ↑</button>
