--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -220,7 +220,8 @@
     .transport .play-btn {
       width: 72px;
       height: 72px;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(255, 255, 255, 0.95);
+      color: var(--bg);
     }
 
     .transport .play-btn svg {
@@ -229,7 +230,7 @@
     }
 
     .transport .play-btn:hover {
-      background: rgba(0, 0, 0, 0.85);
+      background: #fff;
       transform: scale(1.1);
     }
 
