--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -335,6 +335,49 @@
       pointer-events: none;
     }
 
+    /* ===== Fullscreen Button ===== */
+    .fullscreen-btn {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+      width: 36px;
+      height: 36px;
+      border: none;
+      border-radius: 6px;
+      background: rgba(0, 0, 0, 0.6);
+      color: var(--text);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      pointer-events: auto;
+      z-index: 2;
+      transition: background 0.1s;
+    }
+
+    .fullscreen-btn:hover {
+      background: rgba(0, 0, 0, 0.8);
+    }
+
+    .fullscreen-btn svg {
+      width: 18px;
+      height: 18px;
+      fill: currentColor;
+    }
+
+    /* Fullscreen styles */
+    .preview-container:fullscreen {
+      max-width: none;
+      border-radius: 0;
+      border: none;
+    }
+
+    .preview-container:-webkit-full-screen {
+      max-width: none;
+      border-radius: 0;
+      border: none;
+    }
+
     /* ===== Drawer Toggle ===== */
     .drawer-toggle {
       position: absolute;
@@ -557,6 +600,9 @@
       
       <!-- Overlay controls (YouTube-style) -->
       <div class="overlay" id="overlay">
+        <button class="fullscreen-btn" id="fullscreen-btn" title="Fullscreen">
+          <svg viewBox="0 0 24 24"><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>
+        </button>
         <div class="transport">
           <button id="prev-btn" title="Previous" disabled>
             <svg viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6 8.5 6V6z"/></svg>
