feat: add micro-fades to audio playback and debug waveform visualization
- Add audioFadeMs config option (default 15ms) for fade in/out
- Use Web Audio API GainNode for smooth linear ramps
- Add waveform debug panel showing:
  - Full audio waveform
  - Low-energy detection points (green markers)
  - Play region (blue highlight)
  - Fade regions (amber highlight)
  - Start/end markers
- Display stats: point count, start, end, duration, fade duration
- Toggle with DEBUG button or / or \ key

--- a/tools/previewer/index.html
+++ b/tools/previewer/index.html
@@ -589,6 +589,75 @@
       color: var(--text);
     }
 
+    /* ===== Debug Waveform Panel ===== */
+    .debug-waveform {
+      display: none;
+      width: 100%;
+      max-width: 900px;
+      margin-bottom: 0.5rem;
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      overflow: hidden;
+    }
+
+    .debug-waveform.visible {
+      display: block;
+    }
+
+    .debug-waveform-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.5rem 1rem;
+      border-bottom: 1px solid var(--border);
+      font-family: 'SF Mono', 'Consolas', monospace;
+      font-size: 0.7rem;
+      color: var(--text-dim);
+    }
+
+    .debug-waveform-stats {
+      display: flex;
+      gap: 1.5rem;
+    }
+
+    .debug-waveform-stats span {
+      color: var(--text);
+    }
+
+    .debug-waveform-canvas {
+      width: 100%;
+      height: 120px;
+      display: block;
+    }
+
+    .debug-waveform-legend {
+      display: flex;
+      gap: 1.5rem;
+      padding: 0.5rem 1rem;
+      border-top: 1px solid var(--border);
+      font-family: 'SF Mono', 'Consolas', monospace;
+      font-size: 0.65rem;
+      color: var(--text-dim);
+    }
+
+    .debug-waveform-legend span::before {
+      content: '';
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      margin-right: 4px;
+      vertical-align: middle;
+      border-radius: 2px;
+    }
+
+    .legend-waveform::before { background: #444; }
+    .legend-lowenergy::before { background: #4ade80; }
+    .legend-playregion::before { background: rgba(59, 130, 246, 0.15); }
+    .legend-fade::before { background: rgba(251, 191, 36, 0.4); }
+    .legend-start::before { background: #3b82f6; }
+    .legend-end::before { background: #ef4444; }
+
     .debug-toggle {
       position: absolute;
       top: 1rem;
@@ -631,6 +700,28 @@
       <span><span class="label">LOC:</span> <span class="value" id="debug-location">—</span></span>
       <span><span class="label">CHAR:</span> <span class="value" id="debug-character">—</span></span>
       <span><span class="label">STATE:</span> <span class="value" id="debug-state">—</span></span>
+    </div>
+
+    <div class="debug-waveform" id="debug-waveform">
+      <div class="debug-waveform-header">
+        <span>AUDIO WAVEFORM</span>
+        <div class="debug-waveform-stats">
+          <span>Points: <span id="debug-energy-count">—</span></span>
+          <span>Start: <span id="debug-audio-start">—</span></span>
+          <span>End: <span id="debug-audio-end">—</span></span>
+          <span>Dur: <span id="debug-audio-duration">—</span></span>
+          <span>Fade: <span id="debug-fade-duration">—</span></span>
+        </div>
+      </div>
+      <canvas class="debug-waveform-canvas" id="debug-waveform-canvas"></canvas>
+      <div class="debug-waveform-legend">
+        <span class="legend-waveform">Waveform</span>
+        <span class="legend-lowenergy">Low Energy</span>
+        <span class="legend-playregion">Play Region</span>
+        <span class="legend-fade">Fade</span>
+        <span class="legend-start">Start</span>
+        <span class="legend-end">End</span>
+      </div>
     </div>
 
     <div class="preview-container" id="preview-container">
